add auth middleware in config-blog router
