# src/routers/blogConfig.js
@@ -2,7 +2,7 @@ const router = require('express').Router();
 const middleware = require ('../middleware/Auth');
 const { getBlogCOnfig, updateBlogConfig } = require('.././controllers/BlogConfigController');
 
-router.get('/', getBlogCOnfig);
+router.get('/', middleware.isAuth, getBlogCOnfig);
 router.put('/:id', middleware.isAuth, updateBlogConfig);
 
 module.exports = router;
