# swagger.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0",
-    "title": "cms-klik-backend",
+    "title": "blog-backend",
     "contact": {}
   },
   "host": "quiet-harbor-45657.herokuapp.com",
@@ -938,6 +938,79 @@
           }
         }
       }
+    },
+    "/blog-config": {
+      "get": {
+        "summary": "Get blog config",
+        "tags": [
+          "blog-config"
+        ],
+        "operationId": "Getblogconfig",
+        "deprecated": false,
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "required": false,
+            "default": "Bearer {token}",
+            "type": "string"
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "required": false,
+            "default": "Bearer {token}",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "headers": {}
+          }
+        }
+      }
+    },
+    "/blog-config/1": {
+      "put": {
+        "summary": "Update blog config",
+        "tags": [
+          "blog-config"
+        ],
+        "operationId": "Updateblogconfig",
+        "deprecated": false,
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "required": false,
+            "default": "Bearer {token}",
+            "type": "string"
+          },
+          {
+            "name": "Body",
+            "in": "body",
+            "required": true,
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/UpdateblogconfigRequest"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "headers": {}
+          }
+        },
+        "security": []
+      }
     }
   },
   "definitions": {
@@ -1324,6 +1397,36 @@
         "email",
         "password"
       ]
+    },
+    "UpdateblogconfigRequest": {
+      "title": "UpdateblogconfigRequest",
+      "example": {
+        "blogName": "CMS KLIK",
+        "blogAuthor": "Kadarisman",
+        "blogHeroText": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,",
+        "blogHeroTitle": "Your story starts with us"
+      },
+      "type": "object",
+      "properties": {
+        "blogName": {
+          "type": "string"
+        },
+        "blogAuthor": {
+          "type": "string"
+        },
+        "blogHeroText": {
+          "type": "string"
+        },
+        "blogHeroTitle": {
+          "type": "string"
+        }
+      },
+      "required": [
+        "blogName",
+        "blogAuthor",
+        "blogHeroText",
+        "blogHeroTitle"
+      ]
     }
   },
   "security": [],
@@ -1348,6 +1451,9 @@
     },
     {
       "name": "Auth"
+    },
+    {
+      "name": "blog-config"
     }
   ]
 }
